Fixing spacing on tablets for body content

--- a/css/sass/base/_base.scss
+++ b/css/sass/base/_base.scss
@@ -162,8 +162,8 @@ body {
 
 body {
   .container {
-    padding: 40px 0;
-    max-width: 50%;
+    padding: 40px;
+    max-width: 1100px;
     margin: 0 auto;
 
     @include respond($tablet) {
